<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.emperor_tracare.emperortracked.fragments.AccountFragment"
    android:background="@android:color/white">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image_edit_account"
                android:layout_width="@dimen/circle_image_profile_width_heigth"
                android:layout_height="@dimen/circle_image_profile_width_heigth"
                android:src="@drawable/profile"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:src="@drawable/ic_action_edit_gray" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView_name_edit_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/button_textSize"
            android:text="Layne Granados"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/button_textSize"
            android:textStyle="bold" />




            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@android:color/white"></View>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:layout_weight="0.3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/padding_horizontal_login">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextPrimary">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/sign_up_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_name" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextPrimary">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/sign_up_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_username" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    android:theme="@style/EditTextPrimary">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/sign_up_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:text="@android:color/white"
                        android:inputType="textPassword"
                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    android:theme="@style/EditTextPrimary">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/sign_up_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_confirm_password"
                        android:text="@android:color/white"
                        android:inputType="textPassword"
                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    android:theme="@style/EditTextPrimary">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/button_stats_information"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"
                        />

                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/button_update_information"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/update"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/button_textSize"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/button_margin_top"
                    android:paddingTop="@dimen/button_padding_top_bottom"
                    android:paddingBottom="@dimen/button_padding_top_bottom"
                    android:paddingLeft="@dimen/button_padding_right_left"
                    android:paddingRight="@dimen/button_padding_right_left"
                    android:background = "@drawable/roundedbutton"/>

                <Button
                    android:id="@+id/button_see_my_stats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/ver_mis_estad_sticas"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/button_textSize"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/button_margin_top"
                    android:paddingTop="@dimen/button_padding_top_bottom"
                    android:paddingBottom="@dimen/button_padding_top_bottom"
                    android:paddingLeft="@dimen/button_padding_right_left"
                    android:paddingRight="@dimen/button_padding_right_left"
                    android:background = "@drawable/roundedbutton" />

            </LinearLayout>

        </ScrollView>




        </LinearLayout>



</android.support.design.widget.CoordinatorLayout>
