<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_gravity="center_horizontal|center_vertical"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:text="@string/add_a_weight_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textview_title_popup"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:textStyle="bold"
            android:padding="10dp"
            android:textSize="@dimen/button_textSize"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/white"
        android:padding="10dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextPrimary">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/hash_code_popup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/write_your_weight" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_peguin_add_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal|center_vertical"
        android:background="@android:color/white"
        android:layout_marginBottom="10dp">

        <ImageView
            android:layout_width="@dimen/imageview_size_penguin_camera"
            android:layout_height="@dimen/imageview_size_penguin_camera"
            android:layout_gravity="center_horizontal|center_vertical"
            android:src="@drawable/penguin3"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondaryText"
            android:text="@string/touch_penguin_to_take_a_photo"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/textview_text_size_personal_information_profile"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_photo_added"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal|center_vertical"
        android:background="@android:color/white"
        android:layout_marginBottom="10dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imageview_photo_added"
            android:layout_width="@dimen/imageview_size_penguin_camera"
            android:layout_height="@dimen/imageview_size_penguin_camera"
            android:layout_gravity="center_horizontal|center_vertical"
            android:src="@drawable/penguin3"/>

        <ImageView
            android:layout_width="@dimen/imageview_size_add_more_photos_camera"
            android:layout_height="@dimen/imageview_size_add_more_photos_camera"
            android:layout_gravity="center_horizontal|center_vertical"
            android:src="@drawable/ic_plus_photos"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/white">

        <Button
            android:id="@+id/button_cancel_popup_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_popup"
            android:textStyle="bold"
            android:paddingTop="@dimen/button_padding_top_bottom"
            android:paddingBottom="@dimen/button_padding_top_bottom"
            android:paddingLeft="@dimen/button_padding_right_left"
            android:paddingRight="@dimen/button_padding_right_left"
            android:background = "@drawable/roundedbutton"/>

        <Button
            android:id="@+id/button_add_popup_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/add"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_popup"
            android:textStyle="bold"
            android:paddingTop="@dimen/button_padding_top_bottom"
            android:paddingBottom="@dimen/button_padding_top_bottom"
            android:paddingLeft="@dimen/button_padding_right_left"
            android:paddingRight="@dimen/button_padding_right_left"
            android:background = "@drawable/roundedbutton"/>

    </LinearLayout>


</LinearLayout>